# bluepill

./: .gdbinit  Cargo.toml  README.md  gen-examples.sh  memory.x
.cargo/: config
examples/: analog.rs  blinky.rs  buffered_serial.rs  loopback.rs  pwm.rs  stepper.rs  stepper_tasks.rs
src/: clock.rs  frequency.rs  led.rs  lib.rs  pin.rs  serial.rs  timer.rs
src/examples/: _2_blinky.rs  _4_buffered_serial.rs  _4_pwm.rs  _5_stepper_tasks.rs  _7_stepper.rs  mod.rs
